tests/conformance/negative/07-impl-def-missing-implements.sml
<!-- INVALID: implementation definition missing implements -->
<!-- Expected: ValidationError::MissingRequiredAttribute -->
<skill define="implementation" name="orphan-impl">
  Missing the implements attribute.
</skill>
